fix: fix handling of optional values in some cases